<resources>
    <string name="app_name">Controle de Despesas</string>
    <string name="tipos_de_despesas">Categoria</string>
    <string name="despesas_fixas">Despesas Fixas</string>
    <string name="fixa">Fixa</string>
    <string name="despesas_com_alimentacao">Despesas com Alimentação</string>
    <string name="alimentacao">Alimentação</string>
    <string name="despesas_com_transporte">Despesas com Transporte</string>
    <string name="transporte">Transporte</string>
    <string name="despesas_com_lazer">Despesas com Lazer</string>
    <string name="lazer">Lazer</string>
    <string name="contas">Contas</string>
    <string name="carteira">Carteira</string>
    <string name="conta_corrente">Conta Corrente</string>
    <string name="pagamento">Pagamento :</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Cancelar</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao">Cartão</string>
    <string name="pix">Pix</string>
    <string name="agua">Água</string>
    <string name="natacao">Natação</string>
    <string name="feira">Feira</string>
    <string name="gasolina">Gasolina</string>
    <string name="lanche">Lanche</string>
    <string name="telefone">Telefone</string>
    <string name="oficina">Oficina</string>
    <string name="energia">Energia</string>
    <string name="salto">Salto</string>
    <string name="alimento">Alimento</string>
    <string name="foi_selecionado">Foi selecionado!</string>
    <string name="foi_selecionada">" Foi selecionada!"</string>
    <string name="nenhum_selecionado">Não tem nenhum selecionado!</string>
    <string name="nenhuma_despesa_selecionada">Não tem nenhuma despesa selecionada!</string>
    <string name="nenhuma_opcao_foi_selecionada">Nenhuma opção de conta foi selecionada!</string>
    <string name="foram_selecionados">Foram selecionados!</string>
    <string name="categoria">Categoria :</string>
    <string name="descricao">Descrição :</string>
    <string name="conta">Conta :</string>
    <string name="valor">Valor =</string>
    <string name="poupanca">Poupança</string>
    <string name="valor_pago">é o valor pago!</string>
    <string name="valor_nulo">O valor não pode ser nulo!</string>
    <string name="nova_pessoa">Nova Pessoa</string>
    <string name="alterar_despesa">alterar Despesa</string>
    <string name="escolha_uma_opcao">Escolha uma opção</string>
    <string name="campo_nao_pode_ser_vazio">Campo não pode ser vazio!</string>
    <string name="forma_de_pagamento">Selecione uma forma de pagamento!</string>
    <string name="digite_um_valor">Digite um valor!</string>
    <string name="eu">\" eu\"</string>
    <string name="doia_ponto">\": \"</string>
    <string name="rs">\"R$: \"</string>
    <string name="sobre">Sobre</string>
    <string name="adicionar">Adicionar</string>
    <string name="foi_clicado">foi clicado</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluir">Excluir</string>
</resources>