<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tipos_de_despesas"
        app:layout_constraintStart_toStartOf="@+id/radioGroupCategoria"
        app:layout_constraintTop_toTopOf="parent" />

    <!--EditText
        android:id="@+id/editTextDate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:clickable="false"

        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <RadioGroup
        android:id="@+id/radioGroupCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButtonFixas"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/despesas_fixas" />

        <RadioButton
            android:id="@+id/radioButtonAlimentacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/despesas_com_alimentacao" />

        <RadioButton
            android:id="@+id/radioButtonTransportes"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/despesas_com_transporte" />

        <RadioButton
            android:id="@+id/radioButtonLazer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/despesas_com_lazer" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxCarteira"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/carteira"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descricao"
        app:layout_constraintStart_toStartOf="@+id/radioGroupCategoria"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCategoria" />

    <EditText
        android:id="@+id/textViewDescri"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textViewDescr"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescr" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contas"
        app:layout_constraintStart_toStartOf="@+id/textViewDescri"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescri" />

    <CheckBox
        android:id="@+id/checkBoxContaCorrente"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:text="@string/conta_corrente"
        app:layout_constraintStart_toStartOf="@+id/checkBoxCarteira"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCarteira" />

    <CheckBox
        android:id="@+id/checkBoxPoupanca"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="Poupança"
        app:layout_constraintStart_toStartOf="@+id/checkBoxContaCorrente"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxContaCorrente" />

    <Spinner
        android:id="@+id/spinnerPagamento"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/pagamento"
        app:layout_constraintStart_toStartOf="@+id/checkBoxContaCorrente"
        app:layout_constraintTop_toBottomOf="@+id/textViewPagamento" />

    <TextView
        android:id="@+id/textViewPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pagamento"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPoupanca"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPoupanca" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="salvar"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:onClick="cancelar"
        android:text="@string/limpar"
        app:layout_constraintStart_toEndOf="@+id/buttonSalvar"
        app:layout_constraintTop_toBottomOf="@+id/TextViewValor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/valor"
        app:layout_constraintStart_toStartOf="@+id/spinnerPagamento"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPagamento" />

    <EditText
        android:id="@+id/TextViewValor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPagamento" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>